added grid cards but they aren't showing up

--- a/project.config.json
+++ b/project.config.json
@@ -1,23 +1,10 @@
 {
   "files": [
     {
-      "fileId": "1RgMhjtkXlbbf9uzSzy_xPRKwxcVZIZqVytgM_JoU4E4",
-      "type": "doc",
-      "name": "library"
-    },
-    {
-      "fileId": "1gDwO-32cgpBDn_0niV0iu6TqQTaRDr4nmSqnT53magY",
+      "fileId": "1VxZuY8EwdLrS5Kli4iWJinWL5sdQKGLVmep77oEIpWo",
       "type": "sheet",
-      "name": "bookstores"
-    }
-  ],
-  "to_bake": [
-    {
-      "template": "bake-book",
-      "data": "library",
-      "array": "books",
-      "slug": "slug",
-      "path": "books"
+      "name": "discography"
     }
   ]
+
 }
