fixed grid cards

--- a/project.config.json
+++ b/project.config.json
@@ -1,10 +1,20 @@
 {
   "files": [
     {
-      "fileId": "1VxZuY8EwdLrS5Kli4iWJinWL5sdQKGLVmep77oEIpWo",
+      "fileId": "1tp_n-WHiaxVz-e9UbQjgI-x9KqnNaUmZfMGvRZYgbBg",
       "type": "sheet",
       "name": "discography"
+    },
+    {
+      "fileId": "1VmG-3MyWy-aM2biYTmqn_PJ1un71YQeoJVkJvsYTXZc",
+      "type": "doc",
+      "name": "members"
     }
+
   ]
+
+  
+    
+
 
 }
